Fix image stretching, programmatically add titles

--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,7 @@
+img {
+  object-fit: cover;
+}
+
 .App {
   text-align: center;
   font-family: "Montserrat"
